# PokePlusEngine

./: .gitignore  CMakeLists.txt
pokeplusenginelib/: CMakeLists.txt
pokeplusenginelib/include/pokeplus/: pokeplus.hpp  pokeplus_engine_defs.hpp  pokeplus_macros.hpp  pokeplus_main.hpp  pokeplus_subsystems.hpp
pokeplusenginelib/include/pokeplus/maps/: map.hpp  pokeplus_map_manager.hpp  pokeplus_tilemap.hpp
pokeplusenginelib/include/pokeplus/scenes/: pokeplus_scene.hpp  pokeplus_scene_manager.hpp  scene.hpp
pokeplusenginelib/include/pokeplus/subsystems/: pokeplus_logging_system.hpp  pokeplus_map_system.hpp  pokeplus_rendering_system.hpp  pokeplus_scene_system.hpp
pokeplusenginelib/src/: pokeplus_main.cpp
pokeplusenginelib/src/maps/: pokeplus_tilemap.cpp
pokeplusenginelib/src/scenes/: pokeplus_scene.cpp  pokeplus_scene_manager.cpp  scene.cpp
pokeplusenginelib/src/subsystems/: pokeplus_logging_system.cpp  pokeplus_rendering_system.cpp  pokeplus_scene_system.cpp
test_project/: CMakeLists.txt  main.cpp
